# ai-alphatrader-a-share

./: .gitignore  AGENTS.md  App.tsx  LICENSE  README.md  README_zh.md  debug_akshare.py  debug_node_fetch.js  implementation_plan.md  index.css  index.html  index.tsx  metadata.json  operations-log.md  package.json  seed_db.py  tailwind.config.js  task.md  tauri-build-output.txt  test  test.js  test.py  tsconfig.json  types.ts  verification.md  vite.config.ts  vitest.config.ts
.codex/: context-question-1.json  context-question-2.json  context-question-3.json  context-question-4.json  context-question-5.json  context-question-6.json  context-question-7.json  context-question-8.json  context-question-9.json  context-scan.json  context-sufficiency.json  operations-log.md  review-report.md  structured-request.json  testing.md
components/: AboutView.tsx  AuthView.tsx  Charts.tsx  DecisionLogView.tsx  FundManagement.tsx  PortfolioView.tsx  PositionsTable.tsx  SettingsView.tsx  Sidebar.tsx
contexts/: AuthContext.tsx  LanguageContext.tsx
docs/: architecture_validation.md  python_env_setup.md  release_guide.md  setup_python_env.md  system_readiness_analysis.md  telegram_config.md  upgrade_plan.md  verification_result_v2.md  walkthrough_ai_logging.md
scripts/: build-server.cjs  bundle-server.cjs  prepare-akshare.cjs
server/: a_stock_master.json  akshare_service.py  database.sqlite  eastmoney.py  index.js  package.json  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/server/: index.cjs  index.js
src-tauri/src/: main.rs
(+13 files in other folders)
