[package]
name = "ai_alpha_trader"
version = "1.0.0"
description = "Tauri wrapper for AI AlphaTrader"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "updater", "process-relaunch", "dialog-save", "dialog-message", "system-tray", "devtools", "shell-open", "http-all", "process-command-api", "fs-write-file", "dialog-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
